style: a variable to control colors

--- a/GUI/assets/style.qss
+++ b/GUI/assets/style.qss
@@ -1,5 +1,9 @@
+:root{
+    --color-primario: #F5F5F5;
+}
+
 QWidget {
-    background-color: #F5F5F5;
+    background-color: var(--color-primario);
     font-family: 'Segoe UI', sans-serif;
     color: #333333;
 }
